great progress on web, node, deno, bun, mqjs interop

--- a/plan4/index.html
+++ b/plan4/index.html
@@ -15,6 +15,7 @@ Elevator lobby. BENGO reaches from elevator and waves to TY.
 <hello-world
 ^ fade to black
   </script>
+  <pan-saga src="index.saga"></pan-saga>
 </pan-saga>
 
 <script src="as2.js"></script>
